# build

./: BUILD.gn  BUILDCONFIG.gn  README.md
configs/: README.md
configs/cxx_standard/: BUILD.gn
configs/exceptions/: BUILD.gn
configs/include_dirs/: BUILD.gn
configs/warnings/: BUILD.gn
templates/: BUILDCONFIG.gn  README.md
toolchains/: README.md  autodetect.gni
toolchains/gcc/: BUILD.gn
toolchains/gcc/configs/warnings/: BUILD.gn
toolchains/visual_studio/: BUILD.gn
toolchains/visual_studio/configs/cxx_standard/: BUILD.gn
toolchains/visual_studio/configs/exceptions/: BUILD.gn
toolchains/visual_studio/configs/warnings/: BUILD.gn
toolchains/xcode/: BUILD.gn
toolchains/xcode/configs/cxx_standard/: BUILD.gn
toolchains/xcode/configs/exceptions/: BUILD.gn
