# Copyright (c) 2017, Maksym Motornyy. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be found 
# in the LICENSE file.

current_toolchain_dir = get_label_info(current_toolchain, "dir")

config("cxx_98") {
  configs = [
    "${current_toolchain_dir}/configs/cxx_standard:cxx_98",
  ]
}

config("cxx_03") {
  configs = [
    "${current_toolchain_dir}/configs/cxx_standard:cxx_03",
  ]
}

config("cxx_11") {
  configs = [
    "${current_toolchain_dir}/configs/cxx_standard:cxx_11",
  ]
}

config("cxx_14") {
  configs = [
    "${current_toolchain_dir}/configs/cxx_standard:cxx_14",
  ]
}

config("cxx_17") {
  configs = [
    "${current_toolchain_dir}/configs/cxx_standard:cxx_17",
  ]
}
