# Copyright (c) 2017, Maksym Motornyy. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be found 
# in the LICENSE file.

current_toolchain_dir = get_label_info(current_toolchain, "dir")

config("cxx_98_or_higher") {
  configs = [
    "${current_toolchain_dir}/configs/cxx_standard:cxx_98_or_higher",
  ]
}

config("cxx_03_or_higher") {
  configs = [
    "${current_toolchain_dir}/configs/cxx_standard:cxx_03_or_higher",
  ]
}

config("cxx_11_or_higher") {
  configs = [
    "${current_toolchain_dir}/configs/cxx_standard:cxx_11_or_higher",
  ]
}

config("cxx_14_or_higher") {
  configs = [
    "${current_toolchain_dir}/configs/cxx_standard:cxx_14_or_higher",
  ]
}

config("cxx_17_or_higher") {
  configs = [
    "${current_toolchain_dir}/configs/cxx_standard:cxx_17_or_higher",
  ]
}
