# Copyright (c) 2017, Maksym Motornyy. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be found 
# in the LICENSE file.

config("cxx_98") {
  cflags_cc = [
    "-std=c++98",
  ]
}

config("cxx_03") {
  cflags_cc = [
    "-std=c++03",
  ]
}

config("cxx_11") {
  cflags_cc = [
    "-std=c++11",
  ]
}

config("cxx_14") {
  cflags_cc = [
    "-std=c++14",
  ]
}

config("cxx_17") {
  cflags_cc = [
    "-std=c++1z",
  ]
}
